# libavstack

./: LICENSE  README.md
algorithm/: .gitignore  CMakeLists.txt
algorithm/array/: 0026-remove-duplicates-from-sorted-array.cpp  0027-remove-element.cpp  0027-remove-element.py  0034-find-first-and-last-position-of-element-in-sorted-array.cpp  0035-search-insert-position.cpp  0054-spiral-matrix.cpp  0059-spiral-matrix-ii.cpp  0076-minimum-window-substring.cpp  0209-minimum-size-subarray-sum.cpp  0283-move-zeroes.cpp  0704-binary-search.cpp  0704-binary-search.py  0844-backspace-string-compare.cpp  0904-fruit-into-baskets.cpp  0977-squares-of-a-sorted-array.cpp  binary-search.cpp  find-first-and-last-position-of-element-in-sorted-array.cpp  offer-29-shun-shi-zhen-da-yin-ju-zhen-lcof.cpp  search-insert-position.cpp
algorithm/backtracking/: 0017-letter-combinations-of-a-phone-number.cpp  0037-sudoku-solver.cpp  0039-combination-sum.cpp  0040-combination-sum-ii.cpp  0046-permutations.cpp  0047-permutations-ii.cpp  0051-n-queens.cpp  0077-combinations.cpp  0078-subsets.cpp  0090-subsets-ii.cpp  0093-restore-ip-addresses.cpp  0131-palindrome-partitioning.cpp  0216-combination-sum-iii.cpp  0332-reconstruct-itinerary.cpp  0491-non-decreasing-subsequences.cpp
algorithm/binarytree/: 0094-binary-tree-inorder-traversal.cpp  0098-validate-binary-search-tree.cpp  0100-same-tree.cpp  0101-symmetric-tree.cpp  0102-binary-tree-level-order-traversal.cpp  0104-maximum-depth-of-binary-tree.cpp  0105-construct-binary-tree-from-preorder-and-inorder-traversal.cpp  0106-construct-binary-tree-from-inorder-and-postorder-traversal.cpp  0107-binary-tree-level-order-traversal-ii.cpp  0108-convert-sorted-array-to-binary-search-tree.cpp  0110-balanced-binary-tree.cpp  0111-minimum-depth-of-binary-tree.cpp  0112-path-sum.cpp  0113-path-sum-ii.cpp  0116-populating-next-right-pointers-in-each-node.cpp  0117-populating-next-right-pointers-in-each-node-ii.cpp  0144-binary-tree-preorder-traversal.cpp  0145-binary-tree-postorder-traversal.cpp  0199-binary-tree-right-side-view.cpp  0222-count-complete-tree-nodes.cpp  0226-invert-binary-tree.cpp  0235-lowest-common-ancestor-of-a-binary-search-tree.cpp  0236-lowest-common-ancestor-of-a-binary-tree.cpp  0257-binary-tree-paths.cpp  0429-n-ary-tree-level-order-traversal.cpp  0450-delete-node-in-a-bst.cpp  0501-find-mode-in-binary-search-tree.cpp  0513-find-bottom-left-tree-value.cpp  0515-find-largest-value-in-each-tree-row.cpp  0530-minimum-absolute-difference-in-bst.cpp  0538-convert-bst-to-greater-tree.cpp  0559-maximum-depth-of-n-ary-tree.cpp  0572-subtree-of-another-tree.cpp  0589-n-ary-tree-preorder-traversal.cpp  0617-merge-two-binary-trees.cpp  0637-average-of-levels-in-binary-tree.cpp  0654-maximum-binary-tree.cpp  0669-trim-a-binary-search-tree.cpp  0700-search-in-a-binary-search-tree.cpp  0701-insert-into-a-binary-search-tree.cpp  (+3 more)
designpatterns/: .gitignore  CMakeLists.txt
designpatterns/src/decorator/: decorator.vpp  person.cpp
designpatterns/src/facade/: facade.vpp  fund.cpp  fund.vpp
designpatterns/src/factory/: factory.cpp  factory.vpp
designpatterns/src/prototype/: prototype.vpp
designpatterns/src/proxy/: proxy.cpp  proxy.vpp
designpatterns/src/simplefactory/: operation.cpp  operation.vpp
designpatterns/src/strategy/: cash.cpp  strategy.vpp
designpatterns/src/templatemethod/: templatemethod.cpp  templatemethod.vpp
projects/PngViewer/app/src/main/cpp/: CMakeLists.txt  pngviewer_jni.cpp
projects/PngViewer/app/src/main/cpp/librenderer/: CMakeLists.txt  egl_core.cpp  egl_core.h  egl_renderer.cpp  egl_renderer.h  pic_preview_controller.cpp  pic_preview_controller.h  pic_preview_render.cpp  pic_preview_render.h  pic_preview_texture.h  qomo_egl.cpp  qomo_egl.h  rgba_frame.h  shader.cpp  shader.h
projects/QomoPlayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  qomoplayer_jni.cpp
projects/QomoPlayer/app/src/main/cpp/decoder/: frame.cpp  frame.h  media_frame.cpp  media_frame.h  sw_video_decoder.cpp  sw_video_decoder.h  video_decoder.h
projects/QomoPlayer/app/src/main/cpp/media/: android_media_player_callback.cpp  android_media_player_callback.h  media_player.cpp  media_player.h  media_player_callback.h
projects/QomoPlayer/app/src/main/cpp/renderer/: egl_renderer.h  frame_callback.h  shader.h
projects/QomoPlayer/app/src/main/cpp/renderer/audio/: audio_renderer.cpp  audio_renderer.h  opensles_player.cpp  opensles_player.h  opensles_renderer.cpp  opensles_renderer.h
projects/QomoPlayer/app/src/main/cpp/renderer/video/: egl_renderer.cpp  egl_renderer.h  qomo_egl.cpp  shader.cpp  shader.h  video_renderer.cpp  video_renderer.h
projects/QomoPlayer/app/src/main/cpp/stats/: block_profiler.cpp  block_profiler.h  media_player_stats.cpp  media_player_stats.h
projects/QomoPlayer/app/src/main/cpp/synchronizer/: av_synchronizer.cpp  av_synchronizer.h
projects/QomoPlayer/app/src/main/cpp/utils/: circular_buffer.hpp  logging.cpp  logging.h
projects/RgbViewer/app/src/main/cpp/: CMakeLists.txt  egl_renderer.cpp  egl_renderer.h  logging.cpp  qomo_egl.cpp  rgb_generator.h  rgbviewer_jni.cpp  shader.cpp  shader.h
(+219 files in other folders)
